--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Monster - Cloudflare</title>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
     <div class="main">
-        <h2 class="pagetitle">Welcome to HappyMonster with Cloudflare!!</h2>
+        <header>
+            <div class="container">
+                <h2 class="pagetitle">Welcome to HappyMonster with Cloudflare!!</h2>
+            </div>
+        </header>
     </div>
 </body>
 </html>
