--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="main">
         <header>
-            <div class="container">
+            <div class="container mt-2">
                 <h2 class="pagetitle">Welcome to HappyMonster with Cloudflare!!</h2>
             </div>
         </header>
